--- a/ide/static/css/style.css
+++ b/ide/static/css/style.css
@@ -457,15 +457,6 @@ input#netName.hidden {
   font-weight: bold;
 }
 
-textarea.zoo-textbox-input {
-  width: 100%;
-  height: 40rem;
-  max-height: 50vh;
-  max-height: calc(100vh - 30rem);
-  border: 2px solid #ccc;
-  outline: none;
-}
-
 .import-textbox-tabs {
   display: flex;
   height: 6rem;
@@ -1041,5 +1032,77 @@ input[type="file"] {
   }
 }
 
- 
+
+body > .container {
+  padding: 60px 15px 0;
+}
+
+
+.card-flex {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  -o-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
+}
+.card-flex-item {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex; 
+  width: 100%;
+  padding-right: 0;
+}
+.card-flex-wrapper {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #FFFFFF;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 3px 0px;
+    border-radius: 5px;
+    margin-bottom: 1em;
+    margin-right: 0;
+    padding: 1em;
+}
+.card-flex-image img {
+  opacity: 1;
+}
+
+@media (min-width: 768px) {
+  .container .text-muted {
+    text-align: end;
+  } 
+  .card-flex-item {
+    width: 33.33%;
+    padding-right: 1em; 
+  } 
+  .card-flex-item:nth-child(3n) {
+    padding-right: 0;
+  } 
+  .card-flex-image img {
+    opacity: 0.8; 
+  }
+  .card-flex-wrapper:hover {
+    cursor: pointer;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
+  }
+  .card-flex-wrapper:hover .card-flex-image img {
+    opacity: 1;
+    transition: opacity 0.5s cubic-bezier(.43,.41,.22,.91);
+  }
+  
+}
 
